After lesson: Added global CSS and CSS variables

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <script type="module" src="script.js"></script>
   </head>
   <body>
-    <header>
-      <div class="headerLogo">JH</div>
+    <header class="flex jcSpaceBetween aiCenter">
+      <div class="headerLogo flex jcCenter aiCenter">JH</div>
       <nav>
-        <ul>
+        <ul class="flex jcEnd noListDot">
           <li>Nav</li>
           <li>Nav</li>
           <li>Nav</li>
         </ul>
       </nav>
     </header>
-    <main></main>
-    <footer>
+    <main class="fullScreen"></main>
+    <footer class="flex jcCenter">
       <p>Laget av Julie Hauge</p>
     </footer>
   </body>
